// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders a basic button 1`] = `
<button
  class="c-bVoOVF c-bVoOVF-kxlbib-variant-primary"
>
  Test
</button>
`;

exports[`Button renders a button with a startIcon 1`] = `
<button
  class="c-bVoOVF c-bVoOVF-kxlbib-variant-primary"
>
  <span
    style="margin-right: 8px;"
  >
    <svg
      data-testid="icon"
    />
  </span>
  Test
</button>
`;

exports[`Button renders a button with an endIcon 1`] = `
<button
  class="c-bVoOVF c-bVoOVF-kxlbib-variant-primary"
>
  Test
  <span
    style="margin-left: 8px;"
  >
    <svg
      data-testid="icon"
    />
  </span>
</button>
`;

exports[`Button renders an icon button 1`] = `
<button
  class="c-bhXMVC"
  variant="icon"
>
  <span
    style="z-index: 1; display: flex;"
  >
    <svg
      data-testid="icon"
    />
  </span>
</button>
`;
